--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,6 @@
 [submodule "tinydir"]
 	path = tinydir
 	url = https://github.com/cxong/tinydir.git
+[submodule "pod5-file-format"]
+	path = pod5-file-format
+	url = https://github.com/nanoporetech/pod5-file-format
